# lingshu-nexus

./: .env.example  .gitignore  GraphRAG与知识图谱技术调研及框架设计.md  Makefile  README.md  docker-compose.yml  neuroskill_research.md  pyproject.toml  中医类中医智能体脑机接口～2026.5.10.txt  中医脑机接口项目-需求与技术整理.md  基础版本产品化实施方案.md  技术实施方案.md  请导师提供的项目资料清单.md  请导师提供的项目资料清单（tVNS版本）.md  针灸指南知识图谱优化方案-基于最新技术.md  项目TODO与Codex实现规则.md
backend/migrations/: 0001_foundation.down.sql  0001_foundation.up.sql  0002_document_ingestion.down.sql  0002_document_ingestion.up.sql  0003_candidate_extraction.down.sql  0003_candidate_extraction.up.sql  0004_review_release.down.sql  0004_review_release.up.sql  0005_graph_retrieval.down.sql  0005_graph_retrieval.up.sql  0006_skill_registry.down.sql  0006_skill_registry.up.sql  0007_chat_sessions.down.sql  0007_chat_sessions.up.sql  0008_source_connector.down.sql  0008_source_connector.up.sql  README.md
config/: README.md
docs/: README.md
docs/adr/: 0001-t000-engineering-baseline.md  0002-evidence-assertion-schema.md  0003-persistence-foundation.md  0004-document-ingestion-parser-baseline.md  0005-llm-provider-and-candidate-extraction.md  (+7 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: publish_current_branch_to_main.sh  quality.py
tests/: test_admin_panel.py  test_candidate_extraction.py  test_chat_stream.py  test_document_ingestion.py  test_evidence_schema.py  test_graph_retrieval.py  test_persistence_foundation.py  test_review_release.py  test_scaffold.py  test_skill_registry.py  test_source_connector.py
(+63 files in other folders)
